[tool.ruff]
line-length = 128


[tool.ruff.lint]
ignore = ["E712", "F401", "F841", "E711"]


[project]
name = "moguardcore"
version = "0.1.0"
description = "MoGuard Management Core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "alembic>=1.16.5",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "psutil>=7.2.1",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "python-decouple>=3.8",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.37.0",
    "v2share>=0.1.0b31",
    "xxhash>=3.6.0",
]
